@@ -2,6 +2,7 @@ ChangeLog for Span.pm
 
 2005-08-02
 
+* complement of Span+Recurrence is Span+universe
 * removed "density()" method 
 
 2005-07-26
